Added tof ring config in ur model

--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ur_description</name>
+  <name>ur_proxysim_description</name>
   <version>2.1.5</version>
   <description>
     URDF description for Universal Robots
   </description>
 
-  <author>Nadia Hammoudeh Garcia</author>
-  <author>Kelsey Hawkins</author>
-  <author>G.A. vd. Hoorn</author>
-  <author>Lovro Ivanov</author>
-  <author>Mathias Ludtke</author>
-  <author>Wim Meeussen</author>
-  <author>Felix Messmer</author>
-  <author>Miguel Prada Sarasola</author>
-  <author>Denis Stogl</author>
-  <author>Andy Zelenak</author>
   <author>Marvin Grosse Besselmann</author>
 
   <maintainer email="exner@fzi.de">Felix Exner</maintainer>
