--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,17 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(message_filters REQUIRED)
+find_package(pcl_conversions REQUIRED)
+find_package(PCL REQUIRED)
+include_directories(PCL_CONVERSIONS_INCLUDE_DIRS)
 
 add_executable(tof_cloud_processing_node src/tof_cloud_processing_node.cpp src/custom_sync_policy.hpp)
 ament_target_dependencies(tof_cloud_processing_node
   rclcpp
   sensor_msgs
   message_filters
+  pcl_conversions
+  PCL
 )
 
 install(
