--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>pcl_conversions</depend>
+  <depend>pcl_msgs</depend>
+
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
@@ -32,6 +35,7 @@
   <exec_depend>rviz2</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>pcl</exec_depend>
 
   <test_depend>ament_cmake_pytest</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
