tested cloud backprojection - single ring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ find_package(sensor_msgs REQUIRED)
 find_package(message_filters REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(PCL REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(pcl_conversions REQUIRED)
+find_package(pcl_msgs REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(orocos_kdl REQUIRED)
+find_package(kdl_parser REQUIRED)
+find_package(Eigen3 REQUIRED)
 include_directories(PCL_CONVERSIONS_INCLUDE_DIRS)
 
 add_executable(tof_cloud_processing_node src/tof_cloud_processing_node.cpp src/custom_sync_policy.hpp)
@@ -14,8 +22,14 @@ ament_target_dependencies(tof_cloud_processing_node
   rclcpp
   sensor_msgs
   message_filters
-  pcl_conversions
   PCL
+  tf2
+  tf2_ros
+  pcl_conversions
+  pcl_msgs
+  pcl_ros
+  geometry_msgs
+  sensor_msgs
 )
 
 install(
